# zealot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  auto_dev.json  docker-compose.yml  go.work  package-lock.json  package.json  readme.md  sqlc.yml  tsconfig.base.json  tsconfig.json  zdev
apps/: readme.md
apps/cli/: Cargo.toml
apps/mcp/: Cargo.toml
apps/server/: Cargo.toml  Dockerfile
apps/server/src/: main.rs
apps/tui/: Cargo.toml
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
cli/: Cargo.toml  go.mod  main.go  zl
cli/cmd/: attr.go  item.go  login.go  (+1 more)
client/: Dockerfile  eslint.config.cjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vue.config.js
crates/: readme.md
crates/zealot-api/: Cargo.toml
crates/zealot-api/src/http/: account.rs  attribute.rs  auth.rs  comment.rs  common.rs  health.rs  item.rs  item_type.rs  media.rs  middleware.rs  mod.rs  planner.rs  repeat.rs
crates/zealot-app/: Cargo.toml
crates/zealot-app/src/: app.rs  config.rs  lib.rs
crates/zealot-app/src/ports/: common.rs  media.rs  mod.rs  password.rs
crates/zealot-app/src/repos/: account.rs  attribute.rs  comment.rs  common.rs  item.rs  item_attribute_value.rs  item_link.rs  item_type.rs  media.rs  meta.rs  mod.rs  repeat.rs  rule.rs  scope.rs  session.rs
crates/zealot-app/src/services/: account.rs  analysis.rs  attribute.rs  auth.rs  comment.rs  common.rs  item.rs  item_type.rs  media.rs  mod.rs  planner.rs  repeat.rs
crates/zealot-infra/: Cargo.toml
crates/zealot-infra/migrations/postgres/: 0001_initial_schema.sql  0002_account_split_full_name.sql  0002_backfill_parent_links.sql
crates/zealot-infra/migrations/sqlite/: 0001_initial_schema.sql  0002_account_split_full_name.sql  0003_backfill_parent_links.sql
crates/zealot-infra/src/: lib.rs
crates/zealot-infra/src/ports/: mod.rs
crates/zealot-infra/src/ports/media/: filesystem.rs  in_memory.rs  mod.rs  s3.rs
crates/zealot-infra/src/ports/password/: bcrypt_password.rs
crates/zealot-infra/src/repos/: mod.rs
crates/zealot-infra/src/repos/postgres/: account_postgres.rs  attribute_postgres.rs  comment_postgres.rs  item_attribute_value_postgres.rs  item_link_postgres.rs  item_postgres.rs  item_type_postgres.rs  meta_postgres.rs  mod.rs  repeat_postgres.rs  rule_postgres.rs  scope_postgres.rs  session_postgres.rs
crates/zealot-infra/src/repos/sqlite/: account_sqlite.rs  attribute_sqlite.rs  comment_sqlite.rs  item_attribute_value_sqlite.rs  item_link_sqlite.rs  item_sqlite.rs  item_type_sqlite.rs  meta_sqlite.rs  mod.rs  repeat_sqlite.rs  rule_sqlite.rs  scope_sqlite.rs  session_sqlite.rs
database/: comments.sql  init.psql  init.sql  item.sql  migration_tracker_to_comments.sql  order.txt
desktop/: Cargo.toml  styles.css
dev/: .zealot.example.env  build-and-deploy.sh  mcp-compose.sample.yml  zealot-compose.yml
doc/: backend.md  business_requirement_specification.md  frontend.md  index.md  readme.md  software_design_document.md
docs/: architecture.md  migrations.md  readme.md  zealotscript_spec.md
go/: readme.md
mcp/: .dockerignore  Dockerfile  README.md  args.go  client.go  format.go  go.mod  main.go  tools.go
scripts/: .db.example.env  .zealot.env  build-zealot-compose.yml  zealot-compose.yml
service/: Cargo.toml  zealotd.py
test/: readme.md
zealotd/: Cargo.toml  Dockerfile  go.mod  go.sum  init.psql  server.go  zealotd
(+368 files in other folders)
