[workspace]
members = [
    "apps/server",
    "apps/cli",
    "apps/tui",
    "apps/mcp",
    "crates/zealot-domain",
    "crates/zealot-app",
    "crates/zealot-infra",
    "crates/zealot-api"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# Core async + web
tokio = {version = "*", features = ["full"]}
axum = "0.8"
axum-extra = {version = "0.12", features = ["cookie"]}
tower = "0.4"
tower-http = {version = "*", features = ["trace", "cors"]}

# Serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
size = "0.5"

# Database
sqlx = {version = "*", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "uuid", "chrono", "migrate"]}

# Utilities
thiserror = "1"
anyhow = "1"
uuid = {version = "1", features = ["serde", "v4"]}
chrono = {version = "0.4", features = ["serde"]}
sha2 = "0.10"
hex = "0.4"
time = "0.3"
bcrypt = "0.15"

mongodb = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"