[package]
name = "zealot-server"
version.workspace = true
edition.workspace = true
# license.workspace = true

[dependencies]
zealot-domain = {path = "../../crates/zealot-domain"}
zealot-api = {path = "../../crates/zealot-api"}
zealot-app = {path = "../../crates/zealot-app"}
zealot-infra = {path = "../../crates/zealot-infra"}
tokio.workspace = true
sqlx.workspace = true