[package]
name = "zealot-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
axum.workspace = true
axum-extra.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true

zealot-domain = {"path" = "../zealot-domain"}
zealot-app = {"path" = "../zealot-app"}