[package]
name = "zealot-app"
version = "0.1.0"
edition.workspace = true

[dependencies]

zealot-domain = {"path" = "../zealot-domain"}
thiserror.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true