[package]
name = "zealot-infra"
version = "0.1.0"
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
bcrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

sha2.workspace = true
hex.workspace = true

zealot-domain = {"path" = "../zealot-domain"}
zealot-app = {"path" = "../zealot-app"}